adding manifest and logging tab url

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         Test
+        <div id="output"></div>
         <script src="scripts.js"></script>
     </body>
 </html>
