adding initial view

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,28 @@
         <link href="styles.css" rel="stylesheet">
     </head>
     <body>
-        Test
+        <h1>Grab URLs</h1>
+
+        <form id="form">
+            <div>
+                <input id="grab-title" name="grab-title" type="checkbox">
+                <label for="grab-title">Grab titles with URLs</label>
+            </div>
+            <div>
+                <button type="submit">Grab URLs</button>
+            </div>
+        </form>
+
+        <textarea></textarea>
+
+        <div>
+            <button id="copy-urls">Copy URLs</button>
+        </div>
+
+        <!-- DEBUG -->
+        <h2>DEBUG:</h2>
         <div id="output"></div>
+
         <script src="scripts.js"></script>
     </body>
 </html>
