adding format module to format tab urls and titles

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
             </div>
         </form>
 
-        <textarea></textarea>
+        <textarea id="output"></textarea>
 
         <div>
             <button id="copy-urls">Copy URLs</button>
@@ -28,7 +28,7 @@
 
         <!-- DEBUG -->
         <h2>DEBUG:</h2>
-        <div id="output"></div>
+        <div id="debug"></div>
 
         <script src="scripts.js"></script>
     </body>
