updating button normal, focus, hover, active, and disabled states styles

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,9 @@
                 ></textarea>
 
                 <div class="form-line-item mar-b--0">
-                    <button id="copy-urls" class="button">Copy URLs</button>
+                    <button id="copy-urls" class="button" disabled>
+                        Copy URLs
+                    </button>
                 </div>
             </div>
         </main>
