updating textarea normal and focus state styles

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
                 <textarea
                     id="output"
                     class="textarea form-line-item"
+                    spellcheck="false"
                 ></textarea>
 
                 <div class="form-line-item mar-b--0">
