updating checkbox styles

--- a/src/index.html
+++ b/src/index.html
@@ -12,12 +12,75 @@
             <div class="container--beta">
                 <form id="form">
                     <div class="form-line-item">
-                        <input
-                            id="grab-title"
-                            name="grab-title"
-                            type="checkbox"
-                        />
-                        <label for="grab-title">Grab titles with URLs</label>
+                        <div class="checkbox">
+                            <input
+                                id="grab-title"
+                                name="grab-title"
+                                type="checkbox"
+                            />
+                            <label for="grab-title" class="checkbox__label">
+                                <svg
+                                    width="4.4979mm"
+                                    height="4.4979mm"
+                                    version="1.1"
+                                    viewBox="0 0 4.4979 4.4979"
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    xmlns:cc="http://creativecommons.org/ns#"
+                                    xmlns:dc="http://purl.org/dc/elements/1.1/"
+                                    xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
+                                    class="checkbox__box"
+                                >
+                                    <g transform="translate(-95.302 -135.24)">
+                                        <rect
+                                            x="95.699"
+                                            y="135.64"
+                                            width="3.7042"
+                                            height="3.7042"
+                                            rx=".79375"
+                                            ry=".79375"
+                                            fill="#e0d68a"
+                                            stroke="#8e443d"
+                                            stroke-miterlimit="3"
+                                            stroke-width=".26458"
+                                        />
+                                    </g>
+                                    <g
+                                        transform="translate(-95.302 -135.24)"
+                                        class="checkbox__focus-border"
+                                    >
+                                        <rect
+                                            x="95.699"
+                                            y="135.64"
+                                            width="3.7042"
+                                            height="3.7042"
+                                            rx=".79375"
+                                            ry=".79375"
+                                            fill="none"
+                                            stroke="#fff"
+                                            stroke-miterlimit="3"
+                                            stroke-width=".79375"
+                                        />
+                                    </g>
+                                    <g
+                                        transform="translate(-95.302 -135.24)"
+                                        class="checkbox__check"
+                                    >
+                                        <path
+                                            d="m96.601 137.55 0.59778 0.575 1.3023-1.2527"
+                                            fill="none"
+                                            stroke="#8e443d"
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            stroke-width=".52917"
+                                        />
+                                    </g>
+                                </svg>
+
+                                <span class="checkbox__label__text">
+                                    Grab titles with URLs
+                                </span>
+                            </label>
+                        </div>
                     </div>
                     <div class="form-line-item">
                         <button class="button" type="submit">Grab URLs</button>
