updating checkbox label color and font size; setting min width for view

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
                                 id="grab-title"
                                 name="grab-title"
                                 type="checkbox"
+                                checked
                             />
                             <label for="grab-title" class="checkbox__label">
                                 <svg
@@ -75,7 +76,6 @@
                                         />
                                     </g>
                                 </svg>
-
                                 <span class="checkbox__label__text">
                                     Grab titles with URLs
                                 </span>
