adding module to show/hide status messages

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,8 @@
                         Copy URLs
                     </button>
                 </div>
+
+                <div id="message"></div>
             </div>
         </main>
 
