adding message styles

--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
                     </button>
                 </div>
 
-                <div id="message"></div>
+                <div id="message" class="message mar-t--20"></div>
             </div>
         </main>
 
